NuActionGUI/NuActionGUI/src/dtm/parser/DataModelParser.py
# Generated from DataModel.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class DataModelParser ( Parser ):

    grammarFileName = "DataModel.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'entity'", "'{'", "'}'", "'oppositeTo'", 
                     "'in'", "'@entry'", "'('", "','", "')'", "'enum'", 
                     "'Bag'", "'OrderedSet'", "'Sequence'", "'Set'", "'String'", 
                     "'Integer'", "'Real'", "'Boolean'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "TypeName", 
                      "EnumLiteral", "ID", "WS", "COMMENT" ]

    RULE_dataModel = 0
    RULE_components = 1
    RULE_component = 2
    RULE_entity = 3
    RULE_entityBody = 4
    RULE_property = 5
    RULE_propertyType = 6
    RULE_collectionType = 7
    RULE_basicType = 8
    RULE_enumm = 9
    RULE_enumBody = 10
    RULE_propertyName = 11
    RULE_collectionTypeName = 12
    RULE_primitiveTypeName = 13

    ruleNames =  [ "dataModel", "components", "component", "entity", "entityBody", 
                   "property", "propertyType", "collectionType", "basicType", 
                   "enumm", "enumBody", "propertyName", "collectionTypeName", 
                   "primitiveTypeName" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    TypeName=19
    EnumLiteral=20
    ID=21
    WS=22
    COMMENT=23

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class DataModelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def components(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DataModelParser.ComponentsContext)
            else:
                return self.getTypedRuleContext(DataModelParser.ComponentsContext,i)


        def getRuleIndex(self):
            return DataModelParser.RULE_dataModel

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDataModel" ):
                listener.enterDataModel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDataModel" ):
                listener.exitDataModel(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDataModel" ):
                return visitor.visitDataModel(self)
            else:
                return visitor.visitChildren(self)




    def dataModel(self):

        localctx = DataModelParser.DataModelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_dataModel)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 29 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 28
                self.components()
                self.state = 31 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==1 or _la==10):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComponentsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def component(self):
            return self.getTypedRuleContext(DataModelParser.ComponentContext,0)


        def components(self):
            return self.getTypedRuleContext(DataModelParser.ComponentsContext,0)


        def getRuleIndex(self):
            return DataModelParser.RULE_components

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComponents" ):
                listener.enterComponents(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComponents" ):
                listener.exitComponents(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComponents" ):
                return visitor.visitComponents(self)
            else:
                return visitor.visitChildren(self)




    def components(self):

        localctx = DataModelParser.ComponentsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_components)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33
            self.component()
            self.state = 35
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 34
                self.components()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComponentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DataModelParser.RULE_component

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class EnumComponentContext(ComponentContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DataModelParser.ComponentContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def enumm(self):
            return self.getTypedRuleContext(DataModelParser.EnummContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnumComponent" ):
                listener.enterEnumComponent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnumComponent" ):
                listener.exitEnumComponent(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEnumComponent" ):
                return visitor.visitEnumComponent(self)
            else:
                return visitor.visitChildren(self)


    class EntityComponentContext(ComponentContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DataModelParser.ComponentContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def entity(self):
            return self.getTypedRuleContext(DataModelParser.EntityContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntityComponent" ):
                listener.enterEntityComponent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntityComponent" ):
                listener.exitEntityComponent(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEntityComponent" ):
                return visitor.visitEntityComponent(self)
            else:
                return visitor.visitChildren(self)



    def component(self):

        localctx = DataModelParser.ComponentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_component)
        try:
            self.state = 39
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                localctx = DataModelParser.EntityComponentContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 37
                self.entity()
                pass
            elif token in [10]:
                localctx = DataModelParser.EnumComponentContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 38
                self.enumm()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EntityContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TypeName(self):
            return self.getToken(DataModelParser.TypeName, 0)

        def entityBody(self):
            return self.getTypedRuleContext(DataModelParser.EntityBodyContext,0)


        def getRuleIndex(self):
            return DataModelParser.RULE_entity

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntity" ):
                listener.enterEntity(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntity" ):
                listener.exitEntity(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEntity" ):
                return visitor.visitEntity(self)
            else:
                return visitor.visitChildren(self)




    def entity(self):

        localctx = DataModelParser.EntityContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_entity)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self.match(DataModelParser.T__0)
            self.state = 42
            self.match(DataModelParser.TypeName)
            self.state = 43
            self.match(DataModelParser.T__1)
            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 3143744) != 0):
                self.state = 44
                self.entityBody()


            self.state = 47
            self.match(DataModelParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EntityBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def property_(self):
            return self.getTypedRuleContext(DataModelParser.PropertyContext,0)


        def entityBody(self):
            return self.getTypedRuleContext(DataModelParser.EntityBodyContext,0)


        def getRuleIndex(self):
            return DataModelParser.RULE_entityBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntityBody" ):
                listener.enterEntityBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntityBody" ):
                listener.exitEntityBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEntityBody" ):
                return visitor.visitEntityBody(self)
            else:
                return visitor.visitChildren(self)




    def entityBody(self):

        localctx = DataModelParser.EntityBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_entityBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.property_()
            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 3143744) != 0):
                self.state = 50
                self.entityBody()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PropertyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DataModelParser.RULE_property

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class AttributeContext(PropertyContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DataModelParser.PropertyContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def propertyType(self):
            return self.getTypedRuleContext(DataModelParser.PropertyTypeContext,0)

        def propertyName(self):
            return self.getTypedRuleContext(DataModelParser.PropertyNameContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttribute" ):
                listener.enterAttribute(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttribute" ):
                listener.exitAttribute(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttribute" ):
                return visitor.visitAttribute(self)
            else:
                return visitor.visitChildren(self)


    class EndContext(PropertyContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DataModelParser.PropertyContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def propertyType(self):
            return self.getTypedRuleContext(DataModelParser.PropertyTypeContext,0)

        def propertyName(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DataModelParser.PropertyNameContext)
            else:
                return self.getTypedRuleContext(DataModelParser.PropertyNameContext,i)

        def TypeName(self):
            return self.getToken(DataModelParser.TypeName, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnd" ):
                listener.enterEnd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnd" ):
                listener.exitEnd(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEnd" ):
                return visitor.visitEnd(self)
            else:
                return visitor.visitChildren(self)


    class MethodContext(PropertyContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DataModelParser.PropertyContext
            super().__init__(parser)
            self.retType = None # PropertyTypeContext
            self._propertyType = None # PropertyTypeContext
            self.argTypes = list() # of PropertyTypeContexts
            self._propertyName = None # PropertyNameContext
            self.argName = list() # of PropertyNameContexts
            self.copyFrom(ctx)

        def propertyName(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DataModelParser.PropertyNameContext)
            else:
                return self.getTypedRuleContext(DataModelParser.PropertyNameContext,i)

        def propertyType(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DataModelParser.PropertyTypeContext)
            else:
                return self.getTypedRuleContext(DataModelParser.PropertyTypeContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethod" ):
                listener.enterMethod(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethod" ):
                listener.exitMethod(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethod" ):
                return visitor.visitMethod(self)
            else:
                return visitor.visitChildren(self)



    def property_(self):

        localctx = DataModelParser.PropertyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_property)
        self._la = 0 # Token type
        try:
            self.state = 87
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                localctx = DataModelParser.AttributeContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 53
                self.propertyType()
                self.state = 54
                self.propertyName()
                pass

            elif la_ == 2:
                localctx = DataModelParser.EndContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 56
                self.propertyType()
                self.state = 57
                self.propertyName()
                self.state = 62
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [4]:
                    self.state = 58
                    self.match(DataModelParser.T__3)
                    self.state = 59
                    self.propertyName()
                    pass
                elif token in [5]:
                    self.state = 60
                    self.match(DataModelParser.T__4)
                    self.state = 61
                    self.match(DataModelParser.TypeName)
                    pass
                else:
                    raise NoViableAltException(self)

                pass

            elif la_ == 3:
                localctx = DataModelParser.MethodContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 65
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==6:
                    self.state = 64
                    self.match(DataModelParser.T__5)


                self.state = 68
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 1046528) != 0):
                    self.state = 67
                    localctx.retType = self.propertyType()


                self.state = 70
                self.propertyName()
                self.state = 71
                self.match(DataModelParser.T__6)
                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 1046528) != 0):
                    self.state = 72
                    localctx._propertyType = self.propertyType()
                    localctx.argTypes.append(localctx._propertyType)
                    self.state = 73
                    localctx._propertyName = self.propertyName()
                    localctx.argName.append(localctx._propertyName)
                    self.state = 80
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==8:
                        self.state = 74
                        self.match(DataModelParser.T__7)
                        self.state = 75
                        localctx._propertyType = self.propertyType()
                        localctx.argTypes.append(localctx._propertyType)
                        self.state = 76
                        localctx._propertyName = self.propertyName()
                        localctx.argName.append(localctx._propertyName)
                        self.state = 82
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 85
                self.match(DataModelParser.T__8)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PropertyTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def collectionType(self):
            return self.getTypedRuleContext(DataModelParser.CollectionTypeContext,0)


        def basicType(self):
            return self.getTypedRuleContext(DataModelParser.BasicTypeContext,0)


        def getRuleIndex(self):
            return DataModelParser.RULE_propertyType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPropertyType" ):
                listener.enterPropertyType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPropertyType" ):
                listener.exitPropertyType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPropertyType" ):
                return visitor.visitPropertyType(self)
            else:
                return visitor.visitChildren(self)




    def propertyType(self):

        localctx = DataModelParser.PropertyTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_propertyType)
        try:
            self.state = 91
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [11, 12, 13, 14]:
                self.enterOuterAlt(localctx, 1)
                self.state = 89
                self.collectionType()
                pass
            elif token in [15, 16, 17, 18, 19]:
                self.enterOuterAlt(localctx, 2)
                self.state = 90
                self.basicType()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CollectionTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def collectionTypeName(self):
            return self.getTypedRuleContext(DataModelParser.CollectionTypeNameContext,0)


        def propertyType(self):
            return self.getTypedRuleContext(DataModelParser.PropertyTypeContext,0)


        def getRuleIndex(self):
            return DataModelParser.RULE_collectionType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCollectionType" ):
                listener.enterCollectionType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCollectionType" ):
                listener.exitCollectionType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCollectionType" ):
                return visitor.visitCollectionType(self)
            else:
                return visitor.visitChildren(self)




    def collectionType(self):

        localctx = DataModelParser.CollectionTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_collectionType)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.collectionTypeName()
            self.state = 94
            self.match(DataModelParser.T__6)
            self.state = 95
            self.propertyType()
            self.state = 96
            self.match(DataModelParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BasicTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitiveTypeName(self):
            return self.getTypedRuleContext(DataModelParser.PrimitiveTypeNameContext,0)


        def TypeName(self):
            return self.getToken(DataModelParser.TypeName, 0)

        def getRuleIndex(self):
            return DataModelParser.RULE_basicType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBasicType" ):
                listener.enterBasicType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBasicType" ):
                listener.exitBasicType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBasicType" ):
                return visitor.visitBasicType(self)
            else:
                return visitor.visitChildren(self)




    def basicType(self):

        localctx = DataModelParser.BasicTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_basicType)
        try:
            self.state = 100
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [15, 16, 17, 18]:
                self.enterOuterAlt(localctx, 1)
                self.state = 98
                self.primitiveTypeName()
                pass
            elif token in [19]:
                self.enterOuterAlt(localctx, 2)
                self.state = 99
                self.match(DataModelParser.TypeName)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EnummContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TypeName(self):
            return self.getToken(DataModelParser.TypeName, 0)

        def enumBody(self):
            return self.getTypedRuleContext(DataModelParser.EnumBodyContext,0)


        def getRuleIndex(self):
            return DataModelParser.RULE_enumm

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnumm" ):
                listener.enterEnumm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnumm" ):
                listener.exitEnumm(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEnumm" ):
                return visitor.visitEnumm(self)
            else:
                return visitor.visitChildren(self)




    def enumm(self):

        localctx = DataModelParser.EnummContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_enumm)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(DataModelParser.T__9)
            self.state = 103
            self.match(DataModelParser.TypeName)
            self.state = 104
            self.match(DataModelParser.T__1)
            self.state = 105
            self.enumBody()
            self.state = 106
            self.match(DataModelParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EnumBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EnumLiteral(self):
            return self.getToken(DataModelParser.EnumLiteral, 0)

        def TypeName(self):
            return self.getToken(DataModelParser.TypeName, 0)

        def enumBody(self):
            return self.getTypedRuleContext(DataModelParser.EnumBodyContext,0)


        def getRuleIndex(self):
            return DataModelParser.RULE_enumBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnumBody" ):
                listener.enterEnumBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnumBody" ):
                listener.exitEnumBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEnumBody" ):
                return visitor.visitEnumBody(self)
            else:
                return visitor.visitChildren(self)




    def enumBody(self):

        localctx = DataModelParser.EnumBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_enumBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            _la = self._input.LA(1)
            if not(_la==19 or _la==20):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==19 or _la==20:
                self.state = 109
                self.enumBody()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PropertyNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(DataModelParser.ID, 0)

        def getRuleIndex(self):
            return DataModelParser.RULE_propertyName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPropertyName" ):
                listener.enterPropertyName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPropertyName" ):
                listener.exitPropertyName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPropertyName" ):
                return visitor.visitPropertyName(self)
            else:
                return visitor.visitChildren(self)




    def propertyName(self):

        localctx = DataModelParser.PropertyNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_propertyName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(DataModelParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CollectionTypeNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DataModelParser.RULE_collectionTypeName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCollectionTypeName" ):
                listener.enterCollectionTypeName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCollectionTypeName" ):
                listener.exitCollectionTypeName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCollectionTypeName" ):
                return visitor.visitCollectionTypeName(self)
            else:
                return visitor.visitChildren(self)




    def collectionTypeName(self):

        localctx = DataModelParser.CollectionTypeNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_collectionTypeName)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 30720) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrimitiveTypeNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DataModelParser.RULE_primitiveTypeName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrimitiveTypeName" ):
                listener.enterPrimitiveTypeName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrimitiveTypeName" ):
                listener.exitPrimitiveTypeName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimitiveTypeName" ):
                return visitor.visitPrimitiveTypeName(self)
            else:
                return visitor.visitChildren(self)




    def primitiveTypeName(self):

        localctx = DataModelParser.PrimitiveTypeNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_primitiveTypeName)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 491520) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





